ghc-4335c07/testsuite/tests/deriving/should_fail/T14365B.hs
module T14365B where

data Foo a = Foo a
  deriving (Functor)
